Fix invisible license key on light mode
Fixes #189

--- a/public/shared.css
+++ b/public/shared.css
@@ -290,7 +290,6 @@ input:checked + .sb-slider:before {
 
 .license-key-text {
     font-size: 10px;
-    color: white;
 
     width: fit-content;
     margin: auto;
